2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..init):
	Some more debug.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc), (HTTPSrc.Pad),
	(HTTPSrc.openWithConnection), (HTTPSrc.getInputStream),
	(HTTPSrc.getFactoryName):
	Keep track of offset, Don't rely on the server sending EOS.
	close connection on EOS.
	Work around EOS bug in MS JVM with twisted by not reading the last
	byte.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink.AudioClock),
	(AudioSink.AudioClock.setStarted), (AudioSink.RingBuffer.commit),
	(AudioSink.RingBuffer.setSample), (AudioSink.RingBuffer.pause),
	(AudioSink.RingBuffer.stop):
	Remove the lock of the clock to further avoid deadly embraces.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..getParam),
	(Cortado..getBoolParam), (Cortado.), (Cortado..getDoubleParam),
	(Cortado..getIntParam), (Cortado..shutDown), (Cortado..init):
	Print parameter values and how they are parsed.
	Accept 1 as true for boolean parameters.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink.RingBuffer),
	(AudioSink.RingBuffer.setAutoStart):
	Fix potential deadly embrace.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.doSendEvent):
	Wait for preroll befre setting the state to PLAYING after a seek.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Backport race fix in the sink where the state change function could have
	updated the state variables before the streaming thread did, resulting
	in an inconsistent state.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Sink.java: (Sink), (Sink.Pad), (Sink.query),
	(Sink.changeState):
	Make position reporting much more accurate.

2006-11-01  Wim Taymans  <wim@fluendo.com>
