@@ -1,5 +1,10 @@
 2006-11-02  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/player/Cortado.java: (Cortado..stop):
+	Ignore potential errors in shutdown.
+
+2006-11-02  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/player/Cortado.java: (Cortado..init):
 	Some more debug.
 
